package edu.austral.ingsis.math.operands;

public interface SingleOperand {
  double evaluate(double value);

  String getSymbol();
}
